// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden examples > accumulator > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t3",
              "type": "virtual",
            },
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "accumulator",
    "wires": [
      [
        1,
        4,
        1,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > adder > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t1",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t3",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t2",
              "type": "virtual",
            },
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "adder",
    "wires": [],
  },
}
`;

exports[`golden examples > bag_arith > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 10,
                    "index": 1,
                    "name": "signal-A",
                    "type": "virtual",
                  },
                  {
                    "count": 15,
                    "index": 2,
                    "name": "signal-B",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "constant-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 2,
                    "index": 1,
                    "name": "signal-A",
                    "type": "virtual",
                  },
                  {
                    "count": 3,
                    "index": 2,
                    "name": "signal-B",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "constant-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "signal-each",
              "type": "virtual",
            },
            "first_signal_networks": {
              "green": false,
              "red": true,
            },
            "operation": "/",
            "output_signal": {
              "name": "signal-each",
              "type": "virtual",
            },
            "second_signal": {
              "name": "signal-each",
              "type": "virtual",
            },
            "second_signal_networks": {
              "green": true,
              "red": false,
            },
          },
        },
        "entity_number": 3,
        "name": "arithmetic-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "bag_arith",
    "wires": [
      [
        1,
        1,
        3,
        1,
      ],
      [
        2,
        2,
        3,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > bag_filter > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 5,
                    "index": 1,
                    "name": "signal-A",
                    "type": "virtual",
                  },
                  {
                    "count": 7,
                    "index": 2,
                    "name": "signal-B",
                    "type": "virtual",
                  },
                  {
                    "count": 9,
                    "index": 3,
                    "name": "signal-C",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "constant-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 1,
                    "index": 1,
                    "name": "signal-A",
                    "type": "virtual",
                  },
                  {
                    "count": 7,
                    "index": 2,
                    "name": "signal-B",
                    "type": "virtual",
                  },
                  {
                    "count": 8,
                    "index": 3,
                    "name": "signal-C",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "constant-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": "≠",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": true,
                  "red": false,
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "networks": {
                  "green": false,
                  "red": true,
                },
                "signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "decider-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": "=",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": true,
                  "red": false,
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "networks": {
                  "green": false,
                  "red": true,
                },
                "signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 4,
        "name": "decider-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≤",
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
                "second_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "second_signal_networks": {
                  "green": true,
                  "red": false,
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "networks": {
                  "green": false,
                  "red": true,
                },
                "signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 5,
        "name": "decider-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "bag_filter",
    "wires": [
      [
        1,
        1,
        3,
        1,
      ],
      [
        2,
        2,
        3,
        2,
      ],
      [
        1,
        1,
        4,
        1,
      ],
      [
        2,
        2,
        4,
        2,
      ],
      [
        1,
        1,
        5,
        1,
      ],
      [
        2,
        2,
        5,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > bag_wildcards > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 2,
                    "index": 1,
                    "name": "signal-A",
                    "type": "virtual",
                  },
                  {
                    "count": 5,
                    "index": 2,
                    "name": "signal-B",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "constant-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "<",
                "constant": 3,
                "first_signal": {
                  "name": "signal-anything",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "decider-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": ">",
                "constant": 1,
                "first_signal": {
                  "name": "signal-everything",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "decider-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "bag_wildcards",
    "wires": [
      [
        1,
        2,
        2,
        2,
      ],
      [
        1,
        2,
        3,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > clamp > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": ">",
                "constant": 100,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 100,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "signal-each",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t11",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "clamp",
    "wires": [
      [
        1,
        4,
        2,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > clamp_fn > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": ">",
                "constant": 100,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 100,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "signal-each",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t11",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "<",
                "constant": 2,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t11",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 2,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "decider-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "signal-each",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t12",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 4,
        "name": "arithmetic-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "clamp_fn",
    "wires": [
      [
        1,
        4,
        2,
        2,
      ],
      [
        2,
        4,
        3,
        2,
      ],
      [
        3,
        4,
        4,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > comparison-chain > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "<",
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
              {
                "comparator": "<",
                "compare_type": "and",
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "comparison-chain",
    "wires": [],
  },
}
`;

exports[`golden examples > conditional-counter > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
              {
                "constant": -1,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
              {
                "constant": 1,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "conditional-counter",
    "wires": [
      [
        1,
        4,
        1,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > counter > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_constant": 1,
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "counter",
    "wires": [
      [
        1,
        4,
        1,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > each_latch > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 1,
                    "index": 1,
                    "name": "signal-A",
                    "type": "virtual",
                  },
                  {
                    "count": 2,
                    "index": 2,
                    "name": "signal-B",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "constant-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "=",
                "constant": 0,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": "=",
                "compare_type": "and",
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": true,
                  "red": false,
                },
                "second_signal": {
                  "name": "signal-A",
                  "type": "virtual",
                },
                "second_signal_networks": {
                  "green": true,
                  "red": false,
                },
              },
              {
                "comparator": "<",
                "compare_type": "or",
                "constant": 10,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": ">",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "signal-A",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": "=",
                "compare_type": "and",
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": true,
                  "red": false,
                },
                "second_signal": {
                  "name": "signal-A",
                  "type": "virtual",
                },
                "second_signal_networks": {
                  "green": true,
                  "red": false,
                },
              },
              {
                "comparator": "=",
                "compare_type": "or",
                "constant": 0,
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": "=",
                "compare_type": "and",
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": true,
                  "red": false,
                },
                "second_signal": {
                  "name": "signal-B",
                  "type": "virtual",
                },
                "second_signal_networks": {
                  "green": true,
                  "red": false,
                },
              },
              {
                "comparator": "<",
                "compare_type": "or",
                "constant": 10,
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": ">",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "signal-B",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": "=",
                "compare_type": "and",
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": true,
                  "red": false,
                },
                "second_signal": {
                  "name": "signal-B",
                  "type": "virtual",
                },
                "second_signal_networks": {
                  "green": true,
                  "red": false,
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "copy_count_from_input": false,
                "signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "decider-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "each_latch",
    "wires": [
      [
        1,
        2,
        2,
        2,
      ],
      [
        2,
        3,
        2,
        1,
      ],
    ],
  },
}
`;

exports[`golden examples > edge > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t1",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2__previous",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": ">",
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
                "second_signal": {
                  "name": "__t2__previous",
                  "type": "virtual",
                },
                "second_signal_networks": {
                  "green": true,
                  "red": false,
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "decider-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "edge",
    "wires": [
      [
        1,
        4,
        2,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > elseif_nested > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t11",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 1,
                    "index": 1,
                    "name": "__t6",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "constant-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 2,
                    "index": 1,
                    "name": "__t7",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "constant-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t6",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 4,
        "name": "decider-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "signal-each",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t8",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 5,
        "name": "arithmetic-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 3,
                    "index": 1,
                    "name": "__t9",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 6,
        "name": "constant-combinator",
        "position": {
          "x": 10,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t9",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 7,
        "name": "decider-combinator",
        "position": {
          "x": 12,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "signal-each",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t10",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 8,
        "name": "arithmetic-combinator",
        "position": {
          "x": 14,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t10",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 9,
        "name": "decider-combinator",
        "position": {
          "x": 16,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "signal-each",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t11",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 10,
        "name": "arithmetic-combinator",
        "position": {
          "x": 18,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "elseif_nested",
    "wires": [
      [
        10,
        4,
        1,
        2,
      ],
      [
        2,
        2,
        4,
        2,
      ],
      [
        3,
        2,
        4,
        2,
      ],
      [
        4,
        4,
        5,
        2,
      ],
      [
        6,
        2,
        7,
        2,
      ],
      [
        1,
        4,
        7,
        2,
      ],
      [
        7,
        4,
        8,
        2,
      ],
      [
        5,
        4,
        9,
        2,
      ],
      [
        8,
        4,
        9,
        2,
      ],
      [
        9,
        4,
        10,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > for_sum > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t4",
              "type": "virtual",
            },
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
              {
                "comparator": "≤",
                "compare_type": "and",
                "constant": 10,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
              {
                "constant": 1,
                "signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
              {
                "constant": 1,
                "signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "decider-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
              {
                "comparator": "≤",
                "compare_type": "and",
                "constant": 10,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "decider-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 1,
                    "index": 1,
                    "name": "__t3",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 4,
        "name": "constant-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "for_sum",
    "wires": [
      [
        2,
        4,
        3,
        2,
      ],
      [
        3,
        4,
        1,
        2,
      ],
      [
        1,
        4,
        1,
        2,
      ],
      [
        2,
        4,
        2,
        2,
      ],
      [
        4,
        2,
        2,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > mux > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": ">",
                "constant": 0,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
              {
                "comparator": "≠",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "signal-each",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t8",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "mux",
    "wires": [
      [
        1,
        4,
        2,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > or_flags > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": ">",
                "constant": 0,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
              {
                "comparator": ">",
                "compare_type": "or",
                "constant": 0,
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "or_flags",
    "wires": [],
  },
}
`;

exports[`golden examples > place > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t1",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t3",
              "type": "virtual",
            },
            "second_constant": 1,
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "entity_number": 2,
        "name": "wooden-chest",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "entity_number": 3,
        "name": "small-lamp",
        "position": {
          "x": 4,
          "y": 2,
        },
      },
      {
        "entity_number": 4,
        "name": "medium-electric-pole",
        "position": {
          "x": 2,
          "y": 2,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "place",
    "wires": [],
  },
}
`;

exports[`golden examples > signal_at > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "index_constant": 0,
          "operation": "select",
          "select_max": true,
        },
        "entity_number": 1,
        "name": "selector-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "signal_at",
    "wires": [],
  },
}
`;

exports[`golden examples > signal_at_asc > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "index_constant": 0,
          "operation": "select",
          "select_max": false,
        },
        "entity_number": 1,
        "name": "selector-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "signal_at_asc",
    "wires": [],
  },
}
`;

exports[`golden examples > signal_count > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "count_signal": {
            "name": "__t4",
            "type": "virtual",
          },
          "operation": "count",
        },
        "entity_number": 1,
        "name": "selector-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "signal_count",
    "wires": [],
  },
}
`;

exports[`golden examples > sr_latch > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
              {
                "comparator": "=",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
              {
                "comparator": "≠",
                "compare_type": "or",
                "constant": 0,
                "first_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
              {
                "comparator": "=",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "sr_latch",
    "wires": [
      [
        1,
        4,
        1,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > table_bag > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 10,
                    "index": 1,
                    "name": "iron-plate",
                    "type": "virtual",
                  },
                  {
                    "count": -1,
                    "index": 2,
                    "name": "signal-A",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "constant-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "iron-plate",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 1,
                    "index": 1,
                    "name": "iron-plate",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "constant-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": "≠",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": true,
                  "red": false,
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "networks": {
                  "green": false,
                  "red": true,
                },
                "signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 4,
        "name": "decider-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "iron-plate",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t5",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 5,
        "name": "arithmetic-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "table_bag",
    "wires": [
      [
        1,
        2,
        2,
        2,
      ],
      [
        1,
        1,
        4,
        1,
      ],
      [
        3,
        2,
        4,
        2,
      ],
      [
        4,
        4,
        5,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > while_count > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
              {
                "comparator": "<",
                "compare_type": "and",
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
              {
                "constant": 1,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
              {
                "constant": 1,
                "signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 1,
                    "index": 1,
                    "name": "__t4",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "constant-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "while_count",
    "wires": [
      [
        1,
        4,
        1,
        2,
      ],
      [
        2,
        2,
        1,
        2,
      ],
    ],
  },
}
`;
